feat(custom): mock数据及layout基础布局

--- a/src/assets/styles/variable.scss
+++ b/src/assets/styles/variable.scss
@@ -18,3 +18,14 @@ $font-size-medium: 14px;
 $font-size-medium-x: 16px;
 $font-size-large: 18px;
 $font-size-large-x: 22px;
+
+$menuText: #bfcbd9;
+$menuActiveText: #ffffff;
+$subMenuActiveText: #f4f4f5;
+$menuBg: #304156;
+$menuHover: #263445;
+$subMenuBg: #1f2d3d;
+$subMenuHover: #001528;
+$sideBarWidth: 210px;
+
+$navbarHeight: 50px;
