--- a/src/assets/styles/layout.scss
+++ b/src/assets/styles/layout.scss
@@ -18,8 +18,8 @@
      left: 0;
      z-index: 1001;
      overflow: hidden;
-     background-color: $menuBg;
-
+    //  background-color: $menuBg;
+     box-shadow: 1px 0 4px rgb(0 21 41 / 8%);
      // 重置 element-plus 的css
      .horizontal-collapse-transition {
        transition: 0s width ease-in-out, 0s padding-left ease-in-out,
@@ -82,6 +82,9 @@
    .hideSidebar {
      .sidebar-container {
        width: 54px !important;
+       .svg-icon {
+          margin-right: 0;
+       }
      }
 
      .main-container {
