--- a/src/assets/styles/transition.scss
+++ b/src/assets/styles/transition.scss
@@ -1,10 +1,18 @@
-breadcrumb-enter-active,
-breadcrumb-leave-active {
-  transition: all 0.8s;
+.breadcrumb-enter-active,
+.breadcrumb-leave-active {
+  transition: all 0.3s;
 }
 
-breadcrumb-enter-from,
-breadcrumb-leave-active {
+.breadcrumb-enter-from {
   opacity: 0;
-  transform: translateX(20px);
+}
+
+.fade-enter-active,
+.fade-leave-active {
+  transition: all 0.3s;
+}
+
+.fade-enter-from {
+  opacity: 0;
+  transform: translateX(-30px);
 }
